# gaddsconverter

./: AREA_DETECTOR_MERGER_README.md  SCALABILITY_ANALYSIS.md  area_detector_merger.py  example_merger.py  gadds.py  gadds_reverse.py  improved_area_detector_merger.py  main.py  merge_gfrm.ipynb  pyproject.toml  reverse_conversion_test.ipynb  test_scalability.py
